Android Jetpack Compose UI Library – lightweight common UI lib
Implemented – Spinner Components
 - SmartSpinner – fully composable spinner supporting multiple display types:
 - Dialog – pop-up selection list (SpinnerDialog)
 - BottomSheet – slide-up selection panel (SpinnerBottomSheet)
 - FullScreen – navigates to a dedicated selection screen (SpinnerFullScreenScreen - Implement your own screen like this)
 - Single & Multi-select – supports selecting one or multiple items
 - Searchable Lists – optional search bar for filtering items
 - Custom Row & Widget Content – allows passing composable content for rows and the widget itself mainly for (SpinnerDialog and SpinnerBottomSheet)
 - Integration with Navigation, check SpinnerFullScreenScreen
 - Reusable & SDK-Ready
 - Can be extended for future spinner types or custom behavior

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.13.1"
 coreTesting = "2.2.0"
+foundation = "1.9.5"
 kotlin = "2.2.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -21,8 +22,10 @@ ksp = "2.2.21-2.0.4"
 appcompat = "1.7.1"
 material = "1.13.0"
 activity = "1.12.0"
+navigationRuntimeKtx = "2.9.6"
 
 [libraries]
+androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-compose-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version = "1.9.5" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
@@ -58,6 +61,7 @@ hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hil
 # Hilt with AndroidX (e.g., for Compose ViewModels)
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHiltCompiler" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "androidxHiltCompiler" }
+androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
