--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-agp = "8.13.2"
+agp = "9.0.1"
 coreTesting = "2.2.0"
-foundation = "1.10.0"
-kotlin = "2.2.21"
+foundation = "1.10.3"
+kotlin = "2.3.10"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -10,25 +10,25 @@ espressoCore = "3.7.0"
 kotlinTest = "2.2.21"
 kotlinxCoroutinesTest = "1.10.2"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.1"
-composeBom = "2025.12.00"
+activityCompose = "1.12.4"
+composeBom = "2026.02.00"
 room = "2.8.4"
 # Hilt versions
-hilt = "2.57.2"
+hilt = "2.59.1"
 androidxHiltCompiler = "1.3.0"
 
 # KSP version
-ksp = "2.2.21-2.0.4"
+ksp = "2.3.2"
 appcompat = "1.7.1"
 material = "1.13.0"
-activity = "1.12.1"
-navigationRuntimeKtx = "2.9.6"
-uiUnit = "1.10.0"
-uiGraphics = "1.10.0"
+activity = "1.12.4"
+navigationRuntimeKtx = "2.9.7"
+uiUnit = "1.10.3"
+uiGraphics = "1.10.3"
 
 [libraries]
 androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
-androidx-compose-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version = "1.10.0" }
+androidx-compose-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version = "foundation" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -41,7 +41,6 @@ androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.10.0" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
